--- a/Sdl.Web.Tridion.Templates.Legacy/Sdl.Web.Tridion.Templates.Legacy.csproj
+++ b/Sdl.Web.Tridion.Templates.Legacy/Sdl.Web.Tridion.Templates.Legacy.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sdl.Web.Tridion.Templates.Legacy</RootNamespace>
     <AssemblyName>Sdl.Web.Tridion.Templates.Legacy</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -62,31 +61,31 @@
     <Reference Include="System.Xml" />
     <Reference Include="Tridion.Common">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.Common.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.Common.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ContentManager">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ContentManager.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ContentManager.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ContentManager.Common">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ContentManager.Common.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ContentManager.Common.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ContentManager.Publishing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ContentManager.Publishing.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ContentManager.Publishing.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ContentManager.Templating">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ContentManager.Templating.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ContentManager.Templating.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ExternalContentLibrary">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ExternalContentLibrary.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ExternalContentLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Tridion.ExternalContentLibrary.V2">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_references\cm-10.0\Tridion.ExternalContentLibrary.V2.dll</HintPath>
+      <HintPath>..\_references\cm-10.1\Tridion.ExternalContentLibrary.V2.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +137,14 @@
     /out:Sdl.Web.Tridion.Templates.Legacy.merged.dll ^
     /targetplatform:v4 ^
     /lib:$(MSBuildThisFileDirectory)..\_references\cm-9.0 ^
+    Sdl.Web.Tridion.Templates.dll Sdl.Web.Tridion.Templates.Legacy.dll Sdl.Web.DataModel.dll DD4T.ContentModel.Contracts.dll DD4T.ContentModel.dll DD4T.Serialization.dll DD4T.Templates.Base.dll Newtonsoft.Json.dll
+</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>"$(MSBuildThisFileDirectory)..\packages\ILMerge.2.14.1208\tools\ILMerge.exe"  ^
+    /out:Sdl.Web.Tridion.Templates.Legacy.merged.dll ^
+    /targetplatform:v4 ^
+    /lib:$(MSBuildThisFileDirectory)..\_references\cm-10.1 ^
     Sdl.Web.Tridion.Templates.dll Sdl.Web.Tridion.Templates.Legacy.dll Sdl.Web.DataModel.dll DD4T.ContentModel.Contracts.dll DD4T.ContentModel.dll DD4T.Serialization.dll DD4T.Templates.Base.dll Newtonsoft.Json.dll
 </PostBuildEvent>
   </PropertyGroup>
