--- a/Sdl.Web.Tridion.Templates.Tests/packages.config
+++ b/Sdl.Web.Tridion.Templates.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
-  <package id="OpenCover" version="4.6.519" />
-  <package id="ReportGenerator" version="2.4.4.0" />
+  <package id="OpenCover" version="4.7.1221" targetFramework="net481" />
+  <package id="ReportGenerator" version="5.4.4" targetFramework="net481" />
 </packages>
